--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -127,7 +127,7 @@
                                         </div>
                                         <div class="text-right col-sm-12 col-md-12 col-lg-12 col-xs-12" data-pg-collapsed>
                                             <button class="button_paulo btn_default button_paulo_3" name="abbrechen">Abbrechen</button>
-                                            <button class="button_paulo btn_default" name="abbrechen">Speichern</button>                                             
+                                            <button class="button_paulo btn_default" name="speichern" onclick="location.href='mein_profil_lieferant.html'">Speichern</button>                                             
                                         </div>
                                     </div>
                                 </div>
